had my dark mode extention on so everything was wrong. fixed things up so they are the right colors, not the right size yet

--- a/frontend/src/styles/TopNavBar.css
+++ b/frontend/src/styles/TopNavBar.css
@@ -5,3 +5,12 @@
     height: 5vh;
     background-color: #022f50;
 }
+
+.navbar-custom {
+    background-color: #022f50;
+}
+
+.navbar-custom .navbar-brand,
+.navbar-custom .nav-link {
+    color: #f5f5f5;
+}
